refactor/feat: services - user details service: migrate user -> account, return User with full flags, refactor getAuthorities() - enrollment service: use @RequiredArgsConstructor, pre-authorize with appropriate roles for all services, rewrite better messages, refactor insertion, refactor deletion with ifPresentOrElse - registration service: use @RequiredArgsConstructor, pre-authorize services, refactor insertion - user (profile) service: use @RequiredArgsConstructor, remove useless wrapper services, toForm() is now moved to dto files (commit soon), refactor changePassword()