@@ -1,7 +1,7 @@
 package edu.itc.enrollment_scheduling_system.service;
 
-import edu.itc.enrollment_scheduling_system.model.User;
-import edu.itc.enrollment_scheduling_system.repository.UserRepository;
+import edu.itc.enrollment_scheduling_system.model.Account;
+import edu.itc.enrollment_scheduling_system.repository.AccountRepository;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -10,47 +10,41 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.Optional;
 
 @Service
 public class DbUserDetailsService implements UserDetailsService {
 
-    private final UserRepository userRepository;
+    private final AccountRepository accountRepository;
 
-    public DbUserDetailsService(UserRepository userRepository) {
-        this.userRepository = userRepository;
+    public DbUserDetailsService(AccountRepository accountRepository) {
+        this.accountRepository = accountRepository;
     }
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username)
+        
+        Account account = accountRepository.findByUsername(username)
             .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
 
-        if (!user.isApproved()) {
-            throw new UsernameNotFoundException("User account is pending approval");
-        }
-
-        if (!user.isEnabled()) {
-            throw new UsernameNotFoundException("User account is disabled");
-        }
-
         return new org.springframework.security.core.userdetails.User(
-            user.getUsername(),
-            user.getPassword(),
-            getAuthorities(user)
+            account.getUsername(),
+            account.getPasswordHash(),
+            account.isActive(),
+            account.getAccountNonExpired(),
+            account.getCredentialsNonExpired(),
+            account.getAccountNonLocked(),
+            getAuthorities(account)
+            
         );
     }
 
-    private Collection<? extends GrantedAuthority> getAuthorities(User user) {
-        return user.getRoles().stream()
-            .map(role -> {
-                String roleName = role.getName();
-                // Add ROLE_ prefix if not present
-                if (!roleName.startsWith("ROLE_")) {
-                    roleName = "ROLE_" + roleName;
-                }
-                return new SimpleGrantedAuthority(roleName);
-            })
-            .collect(Collectors.toList());
+    public Collection<? extends GrantedAuthority> getAuthorities(Account account) {
+        return Optional.ofNullable(account.getRoles())
+            .orElse(Collections.emptySet())
+            .stream()
+            .map(role -> new SimpleGrantedAuthority(role.getName()))
+            .toList();
     }
 }
